[Task] User story 4 - clean some utils
